Fully rebrand to lighting internals

--- a/Editor/NewBlood.LightingInternals.asmdef
+++ b/Editor/NewBlood.LightingInternals.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "NewBlood.LightingData",
+    "name": "NewBlood.LightingInternals",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
