--- a/Editor/NewBlood.LightingInternals.asmdef
+++ b/Editor/NewBlood.LightingInternals.asmdef
@@ -7,8 +7,10 @@
     ],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
-    "overrideReferences": false,
-    "precompiledReferences": [],
+    "overrideReferences": true,
+    "precompiledReferences": [
+        "Mono.Cecil.dll"
+    ],
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
